Updated env variables

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
 NODE_ENV = xxxx
 PORT = xxxx
 
-DB_URI = xxxx
-DB_NAME = xxxx
+PGHOST=xxxx
+PGUSER=xxxx
+PGDATABASE=xxxx
+PGPASSWORD=xxxx
+PGPORT=xxxx
+PGSSLMODE=xxxx
+
+PGADMIN_DEFAULT_EMAIL=xxxx
+PGADMIN_DEFAULT_PASSWORD=xxxx
 
 SESSION_SECRET = xxxx
