--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "cross-env NODE_ENV=test jest --watch"
   },
   "devDependencies": {
+    "@types/async-retry": "^1.4.1",
     "@types/compression": "^1.0.1",
     "@types/cors": "^2.8.6",
     "@types/dotenv-safe": "^5.0.3",
@@ -24,6 +25,8 @@
     "@types/module-alias": "^2.0.0",
     "@types/multer": "^1.3.10",
     "@types/node": "^12.11.1",
+    "@types/pg": "^7.14.3",
+    "@types/pg-format": "^1.0.0",
     "@types/prettier": "^1.18.3",
     "@types/session-file-store": "^1.2.1",
     "@types/sinon": "^7.5.0",
@@ -52,6 +55,7 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
+    "async-retry": "^1.3.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "compression": "^1.7.4",
@@ -65,6 +69,8 @@
     "lodash": "^4.17.15",
     "module-alias": "^2.2.2",
     "multer": "^1.4.2",
+    "pg": "^7.18.2",
+    "pg-format": "^1.0.4",
     "reflect-metadata": "^0.1.13",
     "session-file-store": "^1.3.1",
     "tmp": "0.1.0",
