--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/lodash": "^4.14.149",
     "@types/module-alias": "^2.0.0",
     "@types/multer": "^1.3.10",
+    "@types/mysql": "^2.15.18",
     "@types/node": "^12.11.1",
     "@types/pg": "^7.14.3",
     "@types/pg-format": "^1.0.0",
@@ -69,6 +70,7 @@
     "lodash": "^4.17.19",
     "module-alias": "^2.2.2",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "pg": "^7.18.2",
     "pg-format": "^1.0.4",
     "reflect-metadata": "^0.1.13",
